--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.34.1",
     "web-vitals": "^1.0.1"
