--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bootstrap": "^5.0.1",
     "install": "^0.13.0",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-parallax": "^3.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.34.1",
     "web-vitals": "^1.0.1"
