--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-overlays": "^5.0.1",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
